--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,4 +13,8 @@
     "vim.useCtrlKeys": false,
     "editor.snippetSuggestions": "top",
     "editor.suggest.showSnippets": true,
+    "editor.minimap.maxColumn": 60,
+    "editor.minimap.renderCharacters": false,
+    "editor.minimap.scale": 1,
+    "editor.minimap.size": "fill",
 }
