cleaned up audio playback using checkboxes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,4 +17,5 @@
     "editor.minimap.renderCharacters": false,
     "editor.minimap.scale": 1,
     "editor.minimap.size": "fill",
+    "editor.minimap.enabled": false,
 }
